authentik/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-1.1.0
  name: authentik-server-auth-becutewith-me
  namespace: kube-system
spec:
  hostnames:
  - auth.becutewith.me
  parentRefs:
  - name: gateway
    namespace: gateway
  rules:
  - backendRefs:
    - name: authentik-server
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /
status:
  parents: []
